Bug 306699 - Creator does not recognize C++ standard libraries/templates when importing.
Summary: Creator does not recognize C++ standard libraries/templates when importing.
Status: RESOLVED FIXED
Alias: None
Product: Necessitas
Classification: Unmaintained
Component: Android QtCreator (other bugs)
Version First Reported In: alpha4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: Alpha 4
Assignee: BogDan Vatra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-12 19:30 UTC by Andrew Ring
Modified: 2012-12-10 18:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Ring 2012-09-12 19:30:17 UTC
When Qt Creator is set to use one of the arm qt versions, #include statements for C++ standard library and template files shows a squigle under the line with a tooltip like "iostream: No such file or directory".  Note that it will still compile, this bug is with the Creator interface only.
Comment 1 BogDan Vatra 2012-09-15 11:49:43 UTC
Git commit 8b2934c367e92fd99a38dc67b76a4847e91c2f37 by BogDan Vatra.
Committed on 15/09/2012 at 13:49.
Pushed by vatra into branch 'unstable'.

Add QMAKE_INCDIR_xxxxx to headers search paths

M  +7    -0    src/plugins/qt4projectmanager/qt4nodes.cpp

http://commits.kde.org/android-qt-creator/8b2934c367e92fd99a38dc67b76a4847e91c2f37
Comment 2 BogDan Vatra 2012-12-07 16:34:39 UTC
Git commit b1d672e49a6472ddd7fbcc4c39f568d518c27949 by BogDan Vatra.
Committed on 15/09/2012 at 13:49.
Pushed by vatra into branch 'rebase_1'.

Add QMAKE_INCDIR_xxxxx to headers search paths

M  +7    -0    src/plugins/qt4projectmanager/qt4nodes.cpp

http://commits.kde.org/android-qt-creator/b1d672e49a6472ddd7fbcc4c39f568d518c27949
Comment 3 BogDan Vatra 2012-12-10 18:39:35 UTC
Git commit 247c324ef03ebfec54e74c9d7f1f67be213b03ad by BogDan Vatra.
Committed on 07/12/2012 at 18:53.
Pushed by vatra into branch 'rebase'.

Add QMAKE_INCDIR_xxxxx to headers search paths

Change-Id: I482d16efc93d9786d4a66846f6991c168d612a63

M  +7    -0    src/plugins/qt4projectmanager/qt4nodes.cpp

http://commits.kde.org/android-qt-creator/247c324ef03ebfec54e74c9d7f1f67be213b03ad