Add QMAKE_INCDIR_xxxxx to headers search paths

BUG: 306699